@@ -1,0 +1,10 @@
+package com.hifiremote.jp1;
+
+public class MAXQProcessor extends BigEndianProcessor
+{
+  public MAXQProcessor( String name )
+  {
+    super( name );
+  }
+  // More will undoubtedly be needed.  This is just a stub.
+}
